--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,15 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+
+# Node modules and dependencies
+node_modules/
+
+# Vite build output
+dist/
+.vite/
+
+# Environment files
+.env
+.env.local
