--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^18.2.0",
-    "@react-three/fiber": "^8.13.0",
+"three": "^0.157.0",    "@react-three/fiber": "^8.13.0",
     "@react-three/drei": "^9.86.0",
     "firebase": "^10.7.0",
     "zustand": "^4.4.0"
