fix: Correct Three.js version in package.json (r157 instead of ^r157)

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^r157",
-    "zustand": "^4.4.0"
+    "three": "r157",    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
