--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-"three": "0.157.0",
+    "three": "0.157.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
