--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0",
-    "gh-pages": "^6.1.0"
+    "gh-pages": "^6.1.0",
+    "terser": "^5.0.0"
   }
 }
