--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.157.0"
+    "three": "0.157.0",
+    "react-three-fiber": "^8.16.0",
+    "drei": "^9.87.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0",
     "gh-pages": "^6.1.0",
-    "terser": "^5.0.0"
+    "terser": "^5.27.0"
   }
 }
