--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "0.157.0",
-    "react-three-fiber": "^8.16.0",
-    "drei": "^9.87.0",
+    "@react-three/fiber": "^8.16.0",
+    "@react-three/drei": "^9.96.1",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
